--- a/404.html
+++ b/404.html
@@ -7,11 +7,20 @@ permalink: /404.html
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Error</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
+
     <!-- Mainly CSS -->
     <link href="{{ "/static/assets/app-20190125.min.css" | prepend: site.baseurl }}" rel="stylesheet">
     <link href="{{ "/static/css/custom.css" | prepend: site.baseurl }}" rel="stylesheet">
+    
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="144x144" href="static/assets/img/favicons/favicon144x144.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="static/assets/img/favicons/favicon114x114.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="static/assets/img/favicons/favicon72x72.png" />
+    <link rel="apple-touch-icon" href="static/assets/img/favicons/favicon57x57.png" />
+    <link rel="shortcut icon" href="static/assets/img/favicons/favicon.png" />
 </head>
 <body class="gray-bg">
     <div class="middle-box text-center animated fadeInDown">
