Fix: streachy image

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ iframe {
   -ms-transform-origin: top left;
   transform-origin: top left;
 }
+img{
+  object-fit: cover;
+}
 </style>
 <script type="text/javascript" src="particles.js"></script>
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
